# aes

./: README.md  fernet.cast
c#/: aes.cs
c#/aes/: Program.cs  aes.csproj
data/: encrypted  key
python/: pyproject.toml
python/aes/: aes.py  fernet.py
python/data/: decrypted  encrypted  key
