[tool.poetry]
name = "aes"
version = "0.1.0"
description = "aes"
authors = ["Jan Willems <jw@elevenbits.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^35.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
